Upgraded Runners to JUNIT5 & Upgraded Deprecated Libraries